--- a/Simple On-Off Switch/SimpleONOFF.html
+++ b/Simple On-Off Switch/SimpleONOFF.html
@@ -4,6 +4,7 @@
         <title>Simple Switch</title>
         <meta charset="UTF-8"/>
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+        <script src="simpleONOFF.js"></script>
 
         <style>
             body {
