--- a/Toggle On-Off Switch/toggle_switch_h.html
+++ b/Toggle On-Off Switch/toggle_switch_h.html
@@ -4,7 +4,7 @@
         <title> Toggle Switch </title>
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <meta charset="UTF-8">
-        <script src="toggle_switch.js"> </script> 
+        <script src="toggle_switch_h.js"> </script> 
         <script>
             var switchState = 0; 
         </script>
