--- a/Simple On-Off Switch/simple_switch_h.html
+++ b/Simple On-Off Switch/simple_switch_h.html
@@ -43,6 +43,8 @@
         </style>
     </head>
     <body>
+        <!-- A simple webpage with two buttons--on and off. When clicked, it'll
+        trigger a PUT request that can be found within simple_switch.js -->
         <h1> Simple Switch </h1>
         <button type="button" onclick="switchOn()"> On </button>
         <button type="button" onclick="switchOff()"> Off </button>
