--- a/Simple On-Off Switch/simple_switch_h.html
+++ b/Simple On-Off Switch/simple_switch_h.html
@@ -4,7 +4,7 @@
         <title> Simple Switch </title>
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <meta charset="UTF-8">
-        <script src="simple_switch.js"> </script> 
+        <script src="simple_switch_h.js"> </script> 
         <style>
             body {
                background: black;
@@ -44,7 +44,7 @@
     </head>
     <body>
         <!-- A simple webpage with two buttons--on and off. When clicked, it'll
-        trigger a PUT request that can be found within simple_switch.js -->
+        trigger a PUT request that can be found within simple_switch_h.js -->
         <h1> Simple Switch </h1>
         <button type="button" onclick="switchOn()"> On </button>
         <button type="button" onclick="switchOff()"> Off </button>
