ERROR: window is not defined
Trying to access functions with browserify.

--- a/Simple On-Off Switch/Helen/simple_switch.html
+++ b/Simple On-Off Switch/Helen/simple_switch.html
@@ -4,7 +4,7 @@
         <title> Simple Switch </title>
         <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
         <meta charset="UTF-8">
-        <script src="../../make_requests.js"> </script> 
+        <script src="../../bundle.js"> </script> 
         <style>
             body {
                background: black;
